Updating the Framework environment
genconfig.py tool is implemented

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,8 @@
         "gpio.h": "c",
         "gpio_hal_ext.h": "c",
         "exti_types.h": "c",
-        "assert.h": "c"
+        "assert.h": "c",
+        "bit_math.h": "c"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
