--- a/project.in
+++ b/project.in
@@ -14,6 +14,7 @@ menu "Platform Configurations"
     source "$PATH_ROOT/Components/HAL/hal.in"
     source "$PATH_ROOT/Components/Drivers/drivers.in"
     source "$PATH_ROOT/Components/RTOS/rtos.in"
+    source "$PATH_ROOT/Components/Utils/utils.in"
 endmenu
 
 menu "Project Configurations"
